--- a/telegraf.conf
+++ b/telegraf.conf
@@ -12,7 +12,7 @@
 
 
 [[outputs.influxdb]]
-  urls = ["http://localhost:8086"] # required
+  urls = ["http://10.144.2.19:8086"] # required
   database = "telegraf" # required
   retention_policy = ""
   write_consistency = "any"
